@@ -90,6 +90,12 @@ DETACH_JOB_FROM_SERVER="1"
 # to this tag.
 #RUNNER_SLIDING_WINDOW_SIZE="5"
 
+# If DETACH_JOB_FROM_SERVER=1 then OAR will treate the end of each job
+# asynchronously.
+# MAX_CONCURRENT_JOB_TERMINATIONS is the maximum number of jobs treated
+# simultaneously (default is 25).
+#MAX_CONCURRENT_JOB_TERMINATIONS=25
+
 # Command to use to connect to other nodes (default is "ssh" in the PATH)
 OPENSSH_CMD="/usr/bin/ssh -p 6667"
 
